this commit fixes the client icons positioning with a flex wrap and proper sizing

--- a/styles.css
+++ b/styles.css
@@ -762,11 +762,11 @@ header .links .buttons .member span {
 }
 @media screen and (max-width: 500px) {
     #industry .clients {
-        padding: 4% 0 10% 0;
+        padding: 0 0 10% 0;
         display: flex;
-        flex-direction: column;
         align-items: center;
-        justify-content: center;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
 }
 
@@ -775,8 +775,8 @@ header .links .buttons .member span {
 }
 @media screen and (max-width: 500px) {
     #industry .clients img {
-        width: 50vw;
-        margin: 10% 0;
+        width: 20vw;
+        margin: 10% 5%;
     }
 }
 
@@ -787,7 +787,7 @@ header .links .buttons .member span {
 @media screen and (max-width: 500px) {
     #industry .clients img:nth-child(2),
     #industry .clients img:nth-child(3) {
-        width: 30vw;
+        width: 12vw;
     }
 }
 
@@ -798,7 +798,7 @@ header .links .buttons .member span {
 @media screen and (max-width: 500px) {
     #industry .clients img:nth-child(5),
     #industry .clients img:nth-child(6) {
-        width: 30vw;
+        width: 12vw;
     }
 }
 
